#VERSION 0.8.2#

 - deleted deprecated method init() in Peak_Core
 
 - added support of php ini_set inside application configuration file (Peak_Core::initConfig)

 - updated methods Peak_Core::getPath() and Peak_Core_Extension_Modules::init() to use Peak_Core::getDefaultAppPaths().

 - method initApp() modified and renamed getDefaultAppPaths() in Peak_Core. The utility of this method is now to generate 
   array of default paths of a application.
   
 - Peak_Core::initConfig() now called inside initApp() and modified boot.php accordingly. This change bring the possibility
   to a modify the folders structure of an application inside its own configuration files.

 - added method getClassName(), removed obj() and renamed $_registered_objects to $_objects in Peak_Registry
 
 - modified boot.php to include autoload.php before launching Peak_Core

 - added method initConfig() in Peak_Core and deprecated method init()

 - added method setVars() to Peak_Config

 - added static method getEnv() and static private property $_env in Peak_Core, fixed Peak_Bootstrap accordingly

 - deprecated constants PROJECT_NAME, PROJECT_DESCR, APP_DEFAULT_CTRL, DEV_MODE

 - renamed constant ROOT to PUBLIC_ROOT, ,ROOT_ABSPATH become PUBLIC_ABSPATH and ROOT_URL become PUBLIC_URL.
   Fixed method baseUrl() in Peak_View_Render accordingly

 - minor fix of method baseUrl() in Peak_View_Render

 - minor fix of method _load in Peak_Config_Ini


#VESRION 0.8.1#
 
 - modified Peak_View_Helper_Debug and added Peak_View_Helper_Debugbar.  

 - modified Peak_Helpers to support array of class name prefixes, library view helpers classes prefix renamed to 
   Peak_View_Helper_. Peak Helper can be extended by application now.

 - added method set() to Peak_View.

 - deprecated views/functions/ folder and files, moved general.php functions to new view helper html.php

 - added method getExtension() to Peak_Spl_FileInfo

 - added class Peak_Spl_Dirinfo
  