@@ -1,5 +1,12 @@
 #VERSION 0.8.2#
 
+ - methods isController(), isInternalController() and isModule() moved from Peak_Core to Peak_Controller_Front.
+   fixed Peak_Controller_Front accordingly.
+ 
+ - deprecated constant APP_THEME and modified Peak_Core::getDefaultAppPaths() accordingly
+
+ - removed experimental stuff about plugins in Peak_Core
+
  - deleted deprecated method init() in Peak_Core
  
  - added support of php ini_set inside application configuration file (Peak_Core::initConfig)
